tools/tests/errors/surf_parse_18.ki
# PARSER: a non-default parameter declared after a default parameter
var f = Function(a = 1, b):
    return b
discard f